refactor paging, sorting and filtering product API structure